--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:postgresql://192.168.31.249:5432/store
-spring.datasource.username=admin
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_management_system?useSSL=false
+spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+spring.jpa.hibernate.ddl-auto = update
