--- a/TPN/docker-compose.yml
+++ b/TPN/docker-compose.yml
@@ -1,31 +1,8 @@
-version: "3"
+version: '3.7'
 services:
-  postgres:
-    image: postgres
-    environment:
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=root
-      - POSTGRES_DB=store
-    ports:
-      - "5432:5432"
-    volumes:
-      - ./postgres-data:/var/lib/postgresql/data
-
-  nginx:
-    build: nginx/
-    ports:
-        - "883:80"
-    depends_on:
-      tomcat:
-        condition: service_healthy
-    volumes: 
-       - ./html:/opt/app/
-
-
-  tomcat:  
-    build: ./tomcat
-    ports:
-      - "8081:8080"
-    links:
-      - postgres
-  
+ webserver:
+  image: nginx:alpine
+  ports:
+   - "8000:80"
+  volumes:
+   - ./app:/usr/share/nginx/html
