--- a/TPN/docker-compose.yml
+++ b/TPN/docker-compose.yml
@@ -1,8 +1,5 @@
 version: '3.7'
 services:
   web:
-    image: nginx:alpine
-    ports:
-      - "8000:80"
-    volumes:
-      - ./app:/usr/share/nginx/html
+    image: ubuntu
+    command: tail -F anything
